-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The _hashCode, _identityHashCode and _newArray intrinsics are currently disabled. They need to be fixed and re-enabled for value types.
- relates to
-
JDK-8206108 [lworld] TestEliminateAllocationPhi fails with SIGSEGV in PhaseMacroExpand::expand_allocate_common
-
- Resolved
-
-
JDK-8206109 [lworld] TestLWorld crashes in ciInstanceKlass::get_field_by_offset() with -Xcomp
-
- Resolved
-