8205340: [lworld] Re-enable _hashCode, _identityHashCode and _newArray intrinsics

Reviewed-by: thartmann