src/hotspot/share/opto/graphKit.cpp
@@ -3345,7 +3345,7 @@ void GraphKit::gen_value_type_array_guard(Node* ary, Node* obj, Node* elem_klass
 }
 
 // Deoptimize if 'ary' is a flattened value type array
-void GraphKit::gen_flattened_array_guard(Node* ary, int nargs) {
+void GraphKit::gen_flattened_array_guard(Node* ary, bool crash, int nargs) {
   assert(EnableValhalla, "should only be used if value types are enabled");
   if (ValueArrayFlatten) {
     // Cannot statically determine if array is flattened, emit runtime check
@@ -3358,9 +3358,16 @@ void GraphKit::gen_flattened_array_guard(Node* ary, int nargs) {
 
     { BuildCutout unless(this, bol, PROB_MAX);
       // TODO just deoptimize for now if value type array is flattened
-      inc_sp(nargs);
-      uncommon_trap(Deoptimization::Reason_array_check,
-                    Deoptimization::Action_none);
+      if (crash) {
+        Node *frame = _gvn.transform(new ParmNode(C->start(), TypeFunc::FramePtr));
+        Node *halt = _gvn.transform(new HaltNode(control(), frame));
+        C->root()->add_req(halt);
+        stop_and_kill_map();
+      } else {
+        inc_sp(nargs);
+        uncommon_trap(Deoptimization::Reason_array_check,
+                      Deoptimization::Action_none);
+      }
     }
   }
 }
@@ -3795,7 +3802,7 @@ Node* GraphKit::new_array(Node* klass_node,     // array klass (maybe variable)
     assert(!StressReflectiveCode, "stress mode does not use these paths");
     // Increase the size limit if we have exact knowledge of array type.
     int log2_esize = Klass::layout_helper_log2_element_size(layout_con);
-    fast_size_limit <<= (LogBytesPerLong - log2_esize);
+    fast_size_limit <<= MAX2(LogBytesPerLong - log2_esize, 0);
   }
 
   Node* initial_slow_cmp  = _gvn.transform( new CmpUNode( length, intcon( fast_size_limit ) ) );
@@ -3952,7 +3959,7 @@ Node* GraphKit::new_array(Node* klass_node,     // array klass (maybe variable)
       // InitializeNode* init = alloc->initialization();
       //init->set_complete_with_arraycopy();
     }
-  } else if (EnableValhalla && (!layout_con || (elem_klass != NULL && elem_klass->is_java_lang_Object() && !ary_type->klass_is_exact()))) {
+  } else if (EnableValhalla && (!layout_con || elem_klass == NULL || (elem_klass->is_java_lang_Object() && !ary_type->klass_is_exact()))) {
     InitializeNode* init = alloc->initialization();
     init->set_unknown_value();
   }
