src/hotspot/share/opto/graphKit.hpp
@@ -824,7 +824,7 @@ class GraphKit : public Phase {
                        Node* *failure_control = NULL );
 
   void gen_value_type_array_guard(Node* ary, Node* obj, Node* elem_klass = NULL);
-  void gen_flattened_array_guard(Node* ary, int nargs = 0);
+  void gen_flattened_array_guard(Node* ary, bool crash = false, int nargs = 0);
 
   Node* gen_subtype_check(Node* subklass, Node* superklass) {
     MergeMemNode* mem = merged_memory();
